welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:12: error: ')' expected but ';' found.
def hunt() {do(avance();baisseBrosse();leveBrosse();)
                       ^SlugHunting:12: error: 'while' expected but identifier found.
def hunt() {do(avance();baisseBrosse();leveBrosse();)
                        ^SlugHunting:12: error: '(' expected but ';' found.
def hunt() {do(avance();baisseBrosse();leveBrosse();)
                                      ^SlugHunting:12: error: illegal start of statement
def hunt() {do(avance();baisseBrosse();leveBrosse();)
                                                    ^